updated css styles for spacing issue

--- a/Static/styles.css
+++ b/Static/styles.css
@@ -167,7 +167,7 @@ h3 span {
   }
 
   .projects {
-    margin-top: 8em;
+    margin-top: 15em;
   }
 
   .projects,
@@ -242,7 +242,7 @@ h3 span {
   }
 
   .projects {
-    margin-top: 10em;
+    margin-top: 15em;
   }
 
   .projects,
